Fix border radius bleed issue

--- a/panel/src/components/Forms/Element/Color/color.css
+++ b/panel/src/components/Forms/Element/Color/color.css
@@ -45,14 +45,11 @@
 	border-radius: var(--color-preview-rounded);
 	overflow: hidden;
 	width: var(--color-preview-size);
-}
-
-.k-color-preview:hover {
-	background: white var(--bg-pattern);
+	background-clip: padding-box;
 }
 
 .k-color-preview::after {
-	border-radius: var(--color-preview-rounded);
+	border-radius: calc(var(--color-preview-rounded) - 1px);
 	box-shadow: 0 0 0 1px inset hsla(0, 0%, var(--color-preview-darkness), 0.175);
 	position: absolute;
 	inset: 0;
